[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "load-environ-typed"
version = "0.2.2"
authors = [
  { name="Johan B.W. de Vries" },
]
description = "You define a class, we load it up from environment in a type safe way"
readme = "README.md"
license = {file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jbwdevries/python-load-environ-typed"
"Bug Tracker" = "https://github.com/jbwdevries/python-load-environ-typed/issues"
